# tidal-collaborative-playlists

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
migrations/: 001_initial.sql  002_playlists.sql  003_sync.sql  004_playlist_description.sql
src/: config.rs  error.rs  main.rs  sync.rs
src/auth/: mod.rs  tidal.rs
src/db/: mod.rs  playlists.rs  users.rs
src/views/: dashboard.rs  home.rs  join.rs  layout.rs  mod.rs
